update audio bar top

--- a/src/assets/common.scss
+++ b/src/assets/common.scss
@@ -40,6 +40,12 @@
   align-items: center;
 }
 
+.spaceBetweenX {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+
 .spreadX {
   width: 100%;
 }
