--- a/src/assets/common.scss
+++ b/src/assets/common.scss
@@ -81,6 +81,46 @@
 }
 
 // layout
+.p-6 {
+  padding: 6px !important;
+}
+
 .p-10 {
   padding: 10px !important;
+}
+
+.p-20 {
+  padding: 20px !important;
+}
+
+.mt-6 {
+  margin-top: 6px !important;
+}
+
+.mr-6 {
+  margin-right: 6px !important;
+}
+
+.mb-6 {
+  margin-bottom: 6px !important;
+}
+
+.ml-6 {
+  margin-left: 6px !important;
+}
+
+.mt-10 {
+  margin-top: 10px !important;
+}
+
+.mr-10 {
+  margin-right: 10px !important;
+}
+
+.mb-10 {
+  margin-bottom: 10px !important;
+}
+
+.ml-10 {
+  margin-left: 10px !important;
 }
