--- a/src/assets/common.scss
+++ b/src/assets/common.scss
@@ -124,3 +124,19 @@
 .ml-10 {
   margin-left: 10px !important;
 }
+
+.mt-20 {
+  margin-top: 20px !important;
+}
+
+.mr-20 {
+  margin-right: 20px !important;
+}
+
+.mb-20 {
+  margin-bottom: 20px !important;
+}
+
+.ml-20{
+  margin-left: 20px !important;
+}
